--- a/msvc-users/src/main/resources/application.yml
+++ b/msvc-users/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     password: admin
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
-    database-platform: org.hibernate.dialect.MySQL8Dialect
+    database-platform: org.hibernate.dialect.MySQLDialect
     generate-ddl: true
 
 server:
