--- a/msvc-users/Dockerfile
+++ b/msvc-users/Dockerfile
@@ -1,12 +1,24 @@
-FROM openjdk:17-alpine
+FROM openjdk:17-alpine as builder
 
 WORKDIR /app/msvc-users
 
 COPY ./pom.xml /app
-COPY ./msvc-users .
+COPY ./msvc-users/.mvn ./.mvn
+COPY ./msvc-users/mvnw .
+COPY ./msvc-users/pom.xml .
+
+RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target
+
+COPY ./msvc-users/src ./src
 
 RUN ./mvnw clean package -DSkipTests
 
+FROM openjdk:17-alpine
+
+WORKDIR /app
+
+COPY --from=builder /app/msvc-users/target/msvc-users-0.0.1-SNAPSHOT.jar .
+
 EXPOSE 8001
 
-ENTRYPOINT ["java", "-jar", "./target/msvc-users-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "msvc-users-0.0.1-SNAPSHOT.jar"]
